acmeair/routes-x2pn/acmeair-authservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-auth-route
spec:
  host: acmeair.apps.x2pn.dmz
  path: /auth
  to:
    kind: Service
    name: acmeair-auth-service
