acmeair/routes-x2pn/acmeair-customerservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-customer-route
spec:
  host: acmeair.apps.x2pn.dmz
  path: /customer
  to:
    kind: Service
    name: acmeair-customer-service
