acmeair/routes-x2pn/acmeair-flightservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-flight-route
spec:
  host: acmeair.apps.x2pn.dmz
  path: /flight
  to:
    kind: Service
    name: acmeair-flight-service
