acmeair/routes-x2pn/acmeair-mainservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-main-route
spec:
  host: acmeair.apps.x2pn.dmz
  path: /acmeair
  to:
    kind: Service
    name: acmeair-main-service
